@startuml
skinparam packageStyle rectangle
skinparam shadowing false
skinparam linetype polyline
skinparam classAttributeIconSize 0



class ImportController {
    + importData(location) : importResult
}

class PropertyOrderManagementController {
    -PropertyDealRepository : PropertyRepository

}

class CSVImport{
    -PropertyRepository : PropertyRepository
    +importData()
}


class Repositories {
    +Repositories()
    +getInstance() : Repositories
    +getPropertyDealRepository() : PropertyRepository
}

class PropertyRepository{
    +getPropertiesSelectionSortByID() : ArrayList<Property>
    +getPropertiesSelectionSortByAreaDescending() : ArrayList<Property>
    +getPropertiesSelectionSortByAreaAscending() : ArrayList<Property>
    +getPropertiesInsertionSortByAreaAscending() : ArrayList<Property>
    +getPropertiesInsertionSortByAreaDescending() : ArrayList<Property>

}

class NetworkManagerSortWindow{
    -controller : StatisticsController
    -btDescendingSortSelection : Button
    -btAscendingSortSelection : Button
    -btDescendingSortInsertion : Button
    -btAscendingSortInsertion: Button
    -btImport : Button
    +onbtDescendingSortSelection : void
    +onbtAscendingSortSelection : void
    +onbtDescendingSortInsertion : void
    +onbtAscendingSortInsertion: void
}


NetworkManagerSortWindow ..> PropertyOrderManagementController
PropertyOrderManagementController ..> Repositories
NetworkManagerSortWindow ..> ImportController
ImportController ..> CSVImport
ImportController ..> Repositories

Repositories --> Repositories : instances
Repositories --> PropertyRepository : has

@enduml
